fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -36,15 +36,8 @@ button:hover {
 	border: 3px solid #fff;
 }
 
-div.dropdown.open {
-	text-align: center;
-}
-
-.dropdown-menu {
-	background-color: transparent;
-	color: #eee;
-	margin: 0 auto;
-	cursor: pointer;
+form p {
+	margin-top: 20px;
 }
 
 #element {
